# mts-system-hack

./: .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/routes/: health.py
backend/app/api/routes/v1/: __init__.py  ai.py  ping_endpoint.py  text_to_speech.py  transcribe_speech.py  translator.py
backend/app/api/schemas/: ai.py  health.py  ping.py  speech_to_text.py
backend/app/core/: connector.py  logging.py  redis.py  service.py  speech_to_text.py
backend/app/core/configs/: config.py  env_configs_models.py
backend/app/core/db/: __init__.py  models.py
backend/app/core/hands/: model.py  utils.py
backend/scripts/: docker-entrypoint.dev.sh  docker-entrypoint.prod.sh
backend/tests/: conftest.py  test_api.py  test_redis.py
frontend/: Dockerfile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  translations.ts  types.ts
frontend/src/components/: ActionPanel.tsx  ChatInterface.tsx  InputArea.tsx  MessageList.tsx
ml_service/: Dockerfile  docker-compose.yml  readme.md  requirements.txt
ml_service/app/: agent.py  constants.py  dev.py  enums.py  llm.py  main.py  translation.py
posttrain/: config.yaml  readme.md  synth.py  train.py
