[tool.poetry]
name = "mts-hackathon-backend"
version = "0.1.0"
description = "MTS Hackathon backend"
authors = ["Mikhail Khromov <khromov05@gmail.com>"]
license = "UNLICENSE"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
aioredis3 = "^2.0.1"
pydantic = "^2.9.2"
orjson = "^3.10.11"
fastapi = "^0.115.5"
tortoise-orm = "^0.21.7"
asyncpg = "^0.30.0"
uvicorn = "^0.32.0"
starlette = "^0.41.2"
python-dotenv = "^1.0.1"
redis = {extras = ["hiredis"], version = "^5.2.0"}
numpy = "^2.2.3"
einops = "^0.8.1"
onnxruntime = "^1.20.1"
opencv-python = "^4.11.0.86"
pydub = "^0.25.1"
ffmpeg-python = "^0.2.0"
audioop-lts = "^0.2.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
httpx = "^0.25.2"
mock = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
